--- a/package.json
+++ b/package.json
@@ -123,11 +123,7 @@
   },
   "overrides": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-  },
-  "dockerfile": {
-    "secrets": [
-      "DATABASE_URL"
-    ]
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "ignore": "^6.0.2"
   }
 }
